--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "puppeteer": "^10.2.0",
+    "twilio": "^3.67.1",
+    "wbm": "^1.1.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
